Fix bug on IE11 with footer element

--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -12,7 +12,7 @@ body {
   flex-direction: column;
 }
 #content {
-  flex: 1;
+  flex-grow: 1;
 }
 a:not(.btn) {
     &.external,
